2016-12-25  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Change all license notices to the Apache License 2.0
	* LICENCE: New Apache License file
	* NOTICE: New file.
	* COPYING: Removed.
	* COPYING.GPL: Removed.

2016-12-20  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* implement.h (PThreadStateReuse): this thread state enum value
	must be less than PThreadStateRunning to reflect an invalid thread
	handle.
	* pthread_kill.c: changed conditions for return of ESRCH.
	* ptw32_destroy.c: copy HANDLEs rather than whole thread struct;
	edit comment.
	* pthread_self.c: set implicit thread handle state to PThreadStateRunning.
	* pthread_create.c: set thread state to PThreadStateSuspended
	regardless because it must have state >= PThreadStateRunning on return.

2016-12-20  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* all (PTW32_*): rename to __PTW32_*.
	(ptw32_*): rename to __ptw32_*.
	(PtW32*): rename to __PtW32*.
	* pthread.h (__PTW32_VERSION_MAJOR): = 3
	(__PTW32_VERSION_MINOR): = 0
	* GNUmakefile: removed; must now configure from GNUmakefile.in.
	I.e. For either MinGW or MinGW-w64:
		# autoheader
		# autoconf
		# ./configure
	* pthread.h (PTHREAD_ONCE_INIT): for __PTW32_VERSION_MAJOR > 2,
	reverse element values to conform to new pthread_once_t.

2016-12-18  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* implement.h  (__PTW32_TEST_SNEAK_PEEK): Defined in tests/test.h
	to control what some tests see when sneaking a peek inside this
	header.
	* GNUMakefile.in: call tests "make realclean"

2016-12-17  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* _ptw32.h: MINGW(all) include stdint.h to define all specific
	size integers (int64_t etc).
	
2016-12-17  Kyle Schwarz <kyle dot r dot schwarz at gmail dot com>

	* _ptw32.h: MINGW6464 define pid_t as __int64.
	
2016-04-01  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* _ptw32.h: Move more header stuff into here.