@@ -1,7 +1,7 @@
 /*
  * reinit1.c
  *
- * Same test as rwlock7.c but loop two or times reinitialising the library
+ * Same test as rwlock7.c but loop two or more times reinitialising the library
  * each time, to test reinitialisation. We use a rwlock test because rw locks
  * use CVs, mutexes and semaphores internally.
  *
@@ -146,6 +146,12 @@ main (int argc, char *argv[])
           assert(pthread_join (threads[count].thread_id, NULL) == 0);
         }
 
+#if defined(_MSC_VER) && !defined(_DLL)
+      /*
+       * We need this when compiling with MSVC and /MT or /MTd flag
+       */
+      pthread_win32_thread_detach_np();
+#endif
       pthread_win32_process_detach_np();
       pthread_win32_process_attach_np();
     }
