@@ -1,3 +1,14 @@
+2018-07-22  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* Makefile (all-tests-md): New; run the /MD build and tests from
+	all-tests-cflags.
+	* Makefile (all-tests-mt): New; run the /MT build and tests from
+	all-tests-cflags.
+	* Makefile (all-tests-cflags): retain; require all-tests-md and
+	all-tests-mt.
+	* _ptw32.h (int64_t): change from #define to typedef.
+	* _ptw32.h (uint64_t): Likewise.
+
 2016-12-25  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* Change all license notices to the Apache License 2.0
